[package]
name = "learning_rust_sdl2"
version = "0.1.0"
authors = ["Galudisu <galudisu@gmail.com>"]
edition = "2018"

[dependencies]
#sdl2 = "0.32.1"
#gl = "0.11.0"

[dependencies.sdl2]
version = "0.32.1"
#git = "https://github.com/AngryLawyer/rust-sdl2"
#default-features = false
features = ["ttf", "image", "gfx", "mixer"]

[dependencies.gl]
version = "0.11.0"
#git = "https://gtihub.com/bjz/gl-rs"